--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>My first three.js app</title>
+		<title>Boid</title>
 		<style>
 			body { margin: 0; }
 			canvas { display: block; }
 		</style>
 	</head>
 	<body>
-		<!-- Using npm three requires server, so just copy pasted three locally -->
-		<!-- <script  src="js/three.js"></script> -->
 		<script  type="module" src="js/hello_world.js"></script>
 	</body>
 </html>
