Use THREE Vector math functions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 		</style>
 	</head>
 	<body>
-		<script  type="module" src="js/hello_world.js"></script>
+		<script  type="module" src="js/Boid3DRenderer.js"></script>
 	</body>
 </html>
