improved source styling

--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
 		<style>
 			body { margin: 0; }
 			canvas { display: block; }
+			.link { position: absolute;
+							bottom: 20px;
+  					 	right: 20px;
+  					 	padding: 4px;
+  					 	border-radius: 4px;
+  					 	font-family: Helvetica;
+  					 	text-decoration: none;
+  					 	color: white;
+  					 	background-color: black;
+  					 	opacity: 0.3;
+           }
+     .link:hover {
+     	opacity: 0.7;
+     }
 		</style>
 	</head>
 	<body>
 		<script  type="module" src="js/Boid3DRenderer.js"></script>
+		<a class="link" href="https://github.com/EvanRocha/3DBoid">Source</a>
+
 	</body>
 </html>
