Tweaked values. removed gitter and decreased number of particles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   					 	padding: 4px;
   					 	border-radius: 4px;
   					 	font-family: Helvetica;
+  					 	font-size: larger;
   					 	text-decoration: none;
   					 	color: white;
   					 	background-color: black;
