--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Boid</title>
+		<title>3D Boid</title>
 		<style>
 			body { margin: 0; }
 			canvas { display: block; }
